# raftsilo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bootstrap.sh
include/: bounded_queue.hh  my_sock.h  procedurex.hh  raft_cc.hh  raft_client.hh  raft_hostdata.hh  raft_msgpack.hh  raft_sender.hh  raft_server.hh  raft_txn.hh  server_data.hh  tx_queue.hh
raft/: Makefile  raft_client.hh  raft_msgpack.hh  raft_server.hh  t.cc
src/: CMakeLists.txt  Makefile  raft_cc.cc  raft_follower.cc  raft_server.cc  raft_silo.cc  raft_test.cc  raft_txn.cc  raftsilo.cc  t.cc
